{
  "version": 4,
  "terraform_version": "1.14.8",
  "serial": 57,
  "lineage": "e357f8bd-baae-2a75-ec87-c70fc7a4ae64",
  "resources": [
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_gateway_principal_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f42c8f76993c992b",
            "arn": "arn:aws:ec2:us-west-1:255834079330:elastic-ip/eipalloc-0f42c8f76993c992b",
            "association_id": "eipassoc-00c56a5ab327e803c",
            "domain": "vpc",
            "id": "eipalloc-0f42c8f76993c992b",
            "network_border_group": "us-west-1",
            "network_interface": "eni-09444c63c9f74eea6",
            "private_dns": "ip-10-0-0-134.us-west-1.compute.internal",
            "private_ip": "10.0.0.134",
            "public_dns": "ec2-52-9-123-198.us-west-1.compute.amazonaws.com",
            "public_ip": "52.9.123.198",
            "public_ipv4_pool": "amazon",
            "region": "us-west-1",
            "tags": {
              "Name": "nat_gateway_principal_eip-dev-us-west-1-0"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "nat_gateway_principal_eip-dev-us-west-1-0",
              "Project": "QuickStack"
            }
          },
          "identity_schema_version": 0
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02016f6813873ab47",
            "arn": "arn:aws:ec2:us-west-1:255834079330:elastic-ip/eipalloc-02016f6813873ab47",
            "association_id": "eipassoc-076fda6b6ecd7a5b9",
            "domain": "vpc",
            "id": "eipalloc-02016f6813873ab47",
            "network_border_group": "us-west-1",
            "network_interface": "eni-0f8f53d4a5e43c193",
            "private_dns": "ip-10-0-1-68.us-west-1.compute.internal",
            "private_ip": "10.0.1.68",
            "public_dns": "ec2-18-144-180-238.us-west-1.compute.amazonaws.com",
            "public_ip": "18.144.180.238",
            "public_ipv4_pool": "amazon",
            "region": "us-west-1",
            "tags": {
              "Name": "nat_gateway_principal_eip-dev-us-west-1-1"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "nat_gateway_principal_eip-dev-us-west-1-1",
              "Project": "QuickStack"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw_principal",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:255834079330:internet-gateway/igw-078b3c24698d5fe11",
            "id": "igw-078b3c24698d5fe11",
            "owner_id": "255834079330",
            "region": "us-west-1",
            "tags": {
              "Name": "igw_principal-dev-us-west-1"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "igw_principal-dev-us-west-1",
              "Project": "QuickStack"
            },
            "vpc_id": "vpc-0522f6b7c7027d64e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.vpc_principal"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway_principal",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f42c8f76993c992b",
            "association_id": "eipassoc-00c56a5ab327e803c",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-0e26c8ffb21df2924",
            "network_interface_id": "eni-09444c63c9f74eea6",
            "private_ip": "10.0.0.134",
            "public_ip": "52.9.123.198",
            "region": "us-west-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-09fa75691da901014",
            "tags": {
              "Name": "nat_gateway_principal-dev-us-west-1-0"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "nat_gateway_principal-dev-us-west-1-0",
              "Project": "QuickStack"
            },
            "vpc_id": "vpc-0522f6b7c7027d64e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_eip.nat_gateway_principal_eip",
            "module.network.aws_internet_gateway.igw_principal",
            "module.network.aws_subnet.public_subnet",
            "module.network.aws_vpc.vpc_principal"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02016f6813873ab47",
            "association_id": "eipassoc-076fda6b6ecd7a5b9",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-05c0537c85b7c5569",
            "network_interface_id": "eni-0f8f53d4a5e43c193",
            "private_ip": "10.0.1.68",
            "public_ip": "18.144.180.238",
            "region": "us-west-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-073733fb0e81e57f2",
            "tags": {
              "Name": "nat_gateway_principal-dev-us-west-1-1"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "nat_gateway_principal-dev-us-west-1-1",
              "Project": "QuickStack"
            },
            "vpc_id": "vpc-0522f6b7c7027d64e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_eip.nat_gateway_principal_eip",
            "module.network.aws_internet_gateway.igw_principal",
            "module.network.aws_subnet.public_subnet",
            "module.network.aws_vpc.vpc_principal"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "private_network_acl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:255834079330:network-acl/acl-0b4f50ccafeb4b047",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 1024,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 600,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 443,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 500,
                "to_port": 443
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 80,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 400,
                "to_port": 80
              }
            ],
            "id": "acl-0b4f50ccafeb4b047",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "10.0.0.0/16",
                "from_port": 1024,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 300,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "10.0.0.0/16",
                "from_port": 443,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 200,
                "to_port": 443
              },
              {
                "action": "allow",
                "cidr_block": "10.0.0.0/16",
                "from_port": 80,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 100,
                "to_port": 80
              }
            ],
            "owner_id": "255834079330",
            "region": "us-west-1",
            "subnet_ids": [
              "subnet-0aa447579e32acb5d",
              "subnet-0c5cf0fffd1335ded"
            ],
            "tags": {
              "Name": "private_network_acl-dev-us-west-1"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "private_network_acl-dev-us-west-1",
              "Project": "QuickStack"
            },
            "vpc_id": "vpc-0522f6b7c7027d64e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_subnet.private_subnet",
            "module.network.aws_vpc.vpc_principal"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "public_network_acl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:255834079330:network-acl/acl-03743a7927e9c6114",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 1024,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 600,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 443,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 500,
                "to_port": 443
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 80,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 400,
                "to_port": 80
              }
            ],
            "id": "acl-03743a7927e9c6114",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 1024,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 300,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 443,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 200,
                "to_port": 443
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 80,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 100,
                "to_port": 80
              }
            ],
            "owner_id": "255834079330",
            "region": "us-west-1",
            "subnet_ids": [
              "subnet-073733fb0e81e57f2",
              "subnet-09fa75691da901014"
            ],
            "tags": {
              "Name": "public_network_acl-dev-us-west-1"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "public_network_acl-dev-us-west-1",
              "Project": "QuickStack"
            },
            "vpc_id": "vpc-0522f6b7c7027d64e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_subnet.public_subnet",
            "module.network.aws_vpc.vpc_principal"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:255834079330:route-table/rtb-0c3eb9a1c9c87d000",
            "id": "rtb-0c3eb9a1c9c87d000",
            "owner_id": "255834079330",
            "propagating_vgws": [],
            "region": "us-west-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0e26c8ffb21df2924",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private_route_table-dev-us-west-1-0"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "private_route_table-dev-us-west-1-0",
              "Project": "QuickStack"
            },
            "timeouts": null,
            "vpc_id": "vpc-0522f6b7c7027d64e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "255834079330",
            "id": "rtb-0c3eb9a1c9c87d000",
            "region": "us-west-1"
          },
          "dependencies": [
            "module.network.aws_eip.nat_gateway_principal_eip",
            "module.network.aws_internet_gateway.igw_principal",
            "module.network.aws_nat_gateway.nat_gateway_principal",
            "module.network.aws_subnet.public_subnet",
            "module.network.aws_vpc.vpc_principal"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:255834079330:route-table/rtb-0e1cb690b2cb490fa",
            "id": "rtb-0e1cb690b2cb490fa",
            "owner_id": "255834079330",
            "propagating_vgws": [],
            "region": "us-west-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-05c0537c85b7c5569",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private_route_table-dev-us-west-1-1"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "private_route_table-dev-us-west-1-1",
              "Project": "QuickStack"
            },
            "timeouts": null,
            "vpc_id": "vpc-0522f6b7c7027d64e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "255834079330",
            "id": "rtb-0e1cb690b2cb490fa",
            "region": "us-west-1"
          },
          "dependencies": [
            "module.network.aws_eip.nat_gateway_principal_eip",
            "module.network.aws_internet_gateway.igw_principal",
            "module.network.aws_nat_gateway.nat_gateway_principal",
            "module.network.aws_subnet.public_subnet",
            "module.network.aws_vpc.vpc_principal"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:255834079330:route-table/rtb-070df7a4e1d210fd7",
            "id": "rtb-070df7a4e1d210fd7",
            "owner_id": "255834079330",
            "propagating_vgws": [],
            "region": "us-west-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-078b3c24698d5fe11",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public_route_table-dev-us-west-1"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "public_route_table-dev-us-west-1",
              "Project": "QuickStack"
            },
            "timeouts": null,
            "vpc_id": "vpc-0522f6b7c7027d64e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "255834079330",
            "id": "rtb-070df7a4e1d210fd7",
            "region": "us-west-1"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.igw_principal",
            "module.network.aws_vpc.vpc_principal"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-029f1512e7feda75e",
            "region": "us-west-1",
            "route_table_id": "rtb-0c3eb9a1c9c87d000",
            "subnet_id": "subnet-0c5cf0fffd1335ded"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_eip.nat_gateway_principal_eip",
            "module.network.aws_internet_gateway.igw_principal",
            "module.network.aws_nat_gateway.nat_gateway_principal",
            "module.network.aws_route_table.private_route_table",
            "module.network.aws_subnet.private_subnet",
            "module.network.aws_subnet.public_subnet",
            "module.network.aws_vpc.vpc_principal"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01bfe5f2d77fd57a3",
            "region": "us-west-1",
            "route_table_id": "rtb-0e1cb690b2cb490fa",
            "subnet_id": "subnet-0aa447579e32acb5d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_eip.nat_gateway_principal_eip",
            "module.network.aws_internet_gateway.igw_principal",
            "module.network.aws_nat_gateway.nat_gateway_principal",
            "module.network.aws_route_table.private_route_table",
            "module.network.aws_subnet.private_subnet",
            "module.network.aws_subnet.public_subnet",
            "module.network.aws_vpc.vpc_principal"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04023e4c271a4961b",
            "region": "us-west-1",
            "route_table_id": "rtb-070df7a4e1d210fd7",
            "subnet_id": "subnet-09fa75691da901014"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_internet_gateway.igw_principal",
            "module.network.aws_route_table.public_route_table",
            "module.network.aws_subnet.public_subnet",
            "module.network.aws_vpc.vpc_principal"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0db33e2ed2ca9595e",
            "region": "us-west-1",
            "route_table_id": "rtb-070df7a4e1d210fd7",
            "subnet_id": "subnet-073733fb0e81e57f2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_internet_gateway.igw_principal",
            "module.network.aws_route_table.public_route_table",
            "module.network.aws_subnet.public_subnet",
            "module.network.aws_vpc.vpc_principal"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:255834079330:subnet/subnet-0c5cf0fffd1335ded",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c5cf0fffd1335ded",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "255834079330",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-west-1",
            "tags": {
              "Name": "private_subnet-dev-us-west-1-0"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "private_subnet-dev-us-west-1-0",
              "Project": "QuickStack"
            },
            "vpc_id": "vpc-0522f6b7c7027d64e"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "255834079330",
            "id": "subnet-0c5cf0fffd1335ded",
            "region": "us-west-1"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc_principal"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:255834079330:subnet/subnet-0aa447579e32acb5d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1c",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0aa447579e32acb5d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "255834079330",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-west-1",
            "tags": {
              "Name": "private_subnet-dev-us-west-1-1"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "private_subnet-dev-us-west-1-1",
              "Project": "QuickStack"
            },
            "vpc_id": "vpc-0522f6b7c7027d64e"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "255834079330",
            "id": "subnet-0aa447579e32acb5d",
            "region": "us-west-1"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc_principal"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:255834079330:subnet/subnet-09fa75691da901014",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09fa75691da901014",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "255834079330",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-west-1",
            "tags": {
              "Name": "public_subnet-dev-us-west-1-0"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "public_subnet-dev-us-west-1-0",
              "Project": "QuickStack"
            },
            "vpc_id": "vpc-0522f6b7c7027d64e"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "255834079330",
            "id": "subnet-09fa75691da901014",
            "region": "us-west-1"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc_principal"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:255834079330:subnet/subnet-073733fb0e81e57f2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1c",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-073733fb0e81e57f2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "255834079330",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-west-1",
            "tags": {
              "Name": "public_subnet-dev-us-west-1-1"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "public_subnet-dev-us-west-1-1",
              "Project": "QuickStack"
            },
            "vpc_id": "vpc-0522f6b7c7027d64e"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "255834079330",
            "id": "subnet-073733fb0e81e57f2",
            "region": "us-west-1"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc_principal"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_principal",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:255834079330:vpc/vpc-0522f6b7c7027d64e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0e0a62b70c3a8d2aa",
            "default_route_table_id": "rtb-04677c23d15eceaa4",
            "default_security_group_id": "sg-029ec63d45cfae398",
            "dhcp_options_id": "dopt-06bcad45c85039071",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0522f6b7c7027d64e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04677c23d15eceaa4",
            "owner_id": "255834079330",
            "region": "us-west-1",
            "tags": {
              "Name": "vpc_principal-dev-us-west-1"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "vpc_principal-dev-us-west-1",
              "Project": "QuickStack"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "255834079330",
            "id": "vpc-0522f6b7c7027d64e",
            "region": "us-west-1"
          }
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:255834079330:vpc-endpoint/vpce-086a78b66382872e4",
            "cidr_blocks": [
              "52.219.220.0/23",
              "52.219.120.0/22",
              "16.15.0.0/21",
              "52.219.216.0/23",
              "52.219.194.0/24",
              "52.219.24.0/21",
              "52.219.112.0/21",
              "3.5.160.0/22",
              "52.219.255.0/24",
              "52.219.23.0/24",
              "52.219.192.0/23"
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "service-defined",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-086a78b66382872e4",
            "ip_address_type": "ipv4",
            "owner_id": "255834079330",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-6ba54002",
            "private_dns_enabled": false,
            "region": "us-west-1",
            "requester_managed": false,
            "route_table_ids": [
              "rtb-0c3eb9a1c9c87d000",
              "rtb-0e1cb690b2cb490fa"
            ],
            "service_name": "com.amazonaws.us-west-1.s3",
            "service_region": "us-west-1",
            "state": "available",
            "tags": {
              "Name": "s3_endpoint-dev-us-west-1"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "s3_endpoint-dev-us-west-1",
              "Project": "QuickStack"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-0522f6b7c7027d64e"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "255834079330",
            "id": "vpce-086a78b66382872e4",
            "region": "us-west-1"
          },
          "dependencies": [
            "module.network.aws_eip.nat_gateway_principal_eip",
            "module.network.aws_internet_gateway.igw_principal",
            "module.network.aws_nat_gateway.nat_gateway_principal",
            "module.network.aws_route_table.private_route_table",
            "module.network.aws_subnet.public_subnet",
            "module.network.aws_vpc.vpc_principal"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "aurora_cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:255834079330:security-group/sg-0481f691051d9e375",
            "description": "Security group for Aurora cluster",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0481f691051d9e375",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "aurora_cluster",
            "name_prefix": "",
            "owner_id": "255834079330",
            "region": "us-west-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "aurora_cluster-dev-us-west-1"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "aurora_cluster-dev-us-west-1",
              "Project": "QuickStack"
            },
            "timeouts": null,
            "vpc_id": "vpc-0522f6b7c7027d64e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "255834079330",
            "id": "sg-0481f691051d9e375",
            "region": "us-west-1"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc_principal"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_all_traffic_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:255834079330:security-group-rule/sgr-0c03f5925ee45c9b4",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0c03f5925ee45c9b4",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-west-1",
            "security_group_id": "sg-0481f691051d9e375",
            "security_group_rule_id": "sgr-0c03f5925ee45c9b4",
            "tags": null,
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Project": "QuickStack"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "255834079330",
            "id": "sgr-0c03f5925ee45c9b4",
            "region": "us-west-1"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc_principal",
            "module.security.aws_security_group.aurora_cluster"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_db_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:255834079330:security-group-rule/sgr-0ed59892bf2b0c403",
            "cidr_ipv4": "10.0.0.0/16",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 5432,
            "id": "sgr-0ed59892bf2b0c403",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-west-1",
            "security_group_id": "sg-0481f691051d9e375",
            "security_group_rule_id": "sgr-0ed59892bf2b0c403",
            "tags": null,
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Project": "QuickStack"
            },
            "to_port": 5432
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "255834079330",
            "id": "sgr-0ed59892bf2b0c403",
            "region": "us-west-1"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc_principal",
            "module.security.aws_security_group.aurora_cluster"
          ]
        }
      ]
    }
  ]
}